assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Average+Sans&family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');

* {
    margin: 0;
    padding: 0;
    border: 0;
}

body {
    background-color: #0e1116;
    font-family: 'Average Sans', sans-serif;
    color: #eae8ff;
}

/* Logo ------------------------------------------------------------------------*/

#logo {
    color: #eae8ff;
    float: left;
    margin-left: 50px;
}

/* Headings --------------------------------------------------------------------*/

h1 {
    font-family: 'Cormorant Garamond', serif;
}

h2 {
    font-family: 'Open Sans', sans-serif;
}

/* Navigation Menu -------------------------------------------------------------*/

.gallery-nav-system {
    margin-top: 0;
}

.gallery-navbar {
    float: right;
}

.navbar-nav .nav-link {
    color: #eae8ff;
}

.navbar-nav .nav-link:hover {
    color: #23e0e7;
}

.navbar-nav .nav-link:active {
    color: #23e0e7;
}

.dropdown-menu {
    background-color: #0e1116;
}

.dropdown-item {
    color: #eae8ff;
}

.dropdown-item:hover {
    background-color: #23e0e7;
}

.navbar-toggler {
    border-color: #eae8ff;
}

.navbar-toggler-icon {
    background-color: #23e0e7;
}
/* Referenced from love running project, CodeInstitute ------------------------*/
#hero-image {
    height: 600px;
    width: 100%;
    background: url("/assets/images/white-flower.jpg") no-repeat center center;
    animation-name: hero-zoom;
    animation-duration: 5s;
    animation-fill-mode: forwards;
}
#hero-outer {
    height: 600px;
    width: 100%;
    overflow: hidden;
}

@keyframes hero-zoom {
    from {
        transform: scale(1);
    }
    to {
        transform: scale(1.1);
    }
}
/* End Of Reference -------------------------------------------------------------*/
/* Gallery Sections -------------------------------------------------------------*/
#gallery-sections {
    width: 80%;
    background-color: #54645e;
    border-radius:5px;
    margin: 0 auto;
    margin-top: 20px;    
}

.welcome-title {
    text-align: center;
}

.card-holder {
    padding: 2px;
    margin: 10px;
    margin-bottom: 5%;
    font-size: 38px;
    display: inline-block;
}

.card-gallery-sections {
    background-color: #eae8ff;
    color: #54645e;
    border-radius: 4%;
}

.card-img-top {
    height: 250px;
}

.card-holder a {
    color: #54645e;
    text-decoration: none;
}

.card-holder a:hover {
    color: #23e0e7;
}

.card-holder a:active {
    color: #23e0e7;
}

/* Gallery Images ---------------------------------------------------------------*/

.gallery-image-holder {
    margin: 10px;
    display: inline-block;
}

.gallery-image {
    width: 300px;
}

/* Footer ----------------------------------------------------------------------*/
footer {
    height: 56px;
    background-color: #0e1116;
    margin-top: 20px;
}

.social-media-links {
    text-align: center;
}

.social-media-links li {
    display: inline;
}

.social-media-links i {
    margin: 1%;
    padding-top: 1%;
    color: #eae8ff;
}

.social-media-links a:hover {
    color: #0e1116;
    background-color: #23e0e7;
}

#gallery-carousel {
    width: 100%;
}

.carousel-item {
    max-height: 600px;
}

